# apex-legends-weapon-stat-analysis

./: .gitignore  README.md  pyproject.toml  requirements-speech.txt  requirements.txt
apex_assistant/: apex_assistant.py  checker.py  config.py  historic_ttffs.csv  legend.py  loadout_cache.py  loadout_comparator.py  loadout_comparer.py  loadout_translator.py  main.py  overall_level.py  ttk_entry.py  weapon.py  weapon_class.py  weapon_comparer.py  weapon_csv_parser.py  weapon_stats.csv  weapon_translator.py
apex_assistant/speech/: apex_command.py  apex_config.py  apex_terms.py  best_command.py  command.py  command_registry.py  compare_command.py  config.py  configure_command.py  create_summary_report_command.py  speech_client.py  suffix.py  term.py  term_translator.py  translations.py
apex_stat_analysis/: apex_assistant.py  checker.py  main.py  weapon.py  weapon_comparer.py  weapon_csv_parser.py  weapon_database.py  weapon_stats.csv  weapon_translator.py
apex_stat_analysis/speech/: apex_terms.py  best_command.py  command.py  command_registry.py  compare_command.py  speech_client.py  term.py  term_translator.py  terms.py
python/: README.md  requirements.txt
python/apex_stat_analysis/: Apex Legends Stats.csv  Historic TTKs.csv  main.py  ttk_datum.py  weapon.py  weapon_csv_parser.py  weapon_database.py
python/apex_stat_analysis/speech/: command.py  command_registry.py  compare_command.py  speech_client.py  term_translator.py  terms.py
scripts/: apex-assistant.bat  install.ps1  prepare_release.ps1  python_version_check.py  setup_venv.ps1  video_frame_annotator.ps1
scripts/python/: video_frame_annotator.py
