[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-assistant"
requires-python = ">= 3.11"
version = "2024.07.02"
dynamic = ["dependencies"]

[project.scripts]
apex-assistant = "apex_stat_analysis.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
apex_stat_analysis = ["*.csv"]

[tool.setuptools.packages.find]
include = ["apex_stat_analysis*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt", "requirements-speech.txt"]}
