[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-assistant"
requires-python = ">= 3.11"
version = "0.5.0"
dynamic = ["dependencies"]

[project.scripts]
apex-assistant = "apex_assistant.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
apex_assistant = ["*.csv"]

[tool.setuptools.packages.find]
include = ["apex_assistant*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt", "requirements-speech.txt"] }
